objects/DMAPP__DM_Sales_Process_Map__c.object
<CustomObject>
    <description>ADMIN ONLY DATA CONFIG

This object is responsible for the mapping of Opportunity Types to the Playbook Sales Processes. The mapping can be accessed from the Playbook Admin application.</description>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Record_Type__c</fullName>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Sales_Process__c</fullName>
        <label>Sales Process</label>
        <referenceTo>DMAPP__DM_Sales_Process__c</referenceTo>
        <relationshipName>DM_Sales_Process_Maps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Sales Process Map</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Process Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Process Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>